--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SubmitOrderActivity"></activity>
+        <activity android:name=".activities.OrderActivity"></activity>
         <activity android:name=".activities.PaymentActivity" />
         <activity android:name=".activities.StartActivity">
             <intent-filter>
