--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.OrderActivity"></activity>
+        <activity android:name=".activities.OrderActivity">
+        </activity>
         <activity android:name=".activities.PaymentActivity" />
-        <activity android:name=".activities.StartActivity">
+        <activity android:name=".activities.StartActivity"></activity>
+        <activity android:name=".activities.AddAddressActivity">
+
+        </activity>
+        <activity android:name=".activities.AddressActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.AddAddressActivity" />
-        <activity android:name=".activities.AddressActivity" />
         <activity android:name=".activities.CartActivity" />
         <activity android:name=".activities.ProductDetailActivity" />
         <activity android:name=".activities.SubCategoryActivity" />
