Added cart badge count

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,7 @@
         <activity android:name=".activities.OrderActivity">
         </activity>
         <activity android:name=".activities.PaymentActivity" />
-        <activity android:name=".activities.StartActivity"></activity>
-        <activity android:name=".activities.AddAddressActivity">
-
-        </activity>
-        <activity android:name=".activities.AddressActivity">
+        <activity android:name=".activities.StartActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.AddAddressActivity"></activity>
+        <activity android:name=".activities.AddressActivity"></activity>
         <activity android:name=".activities.CartActivity" />
         <activity android:name=".activities.ProductDetailActivity" />
         <activity android:name=".activities.SubCategoryActivity" />
