--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.OrderHistoryActivity">
-
-
-        </activity>
-        <activity android:name=".activities.OrderActivity"></activity>
+        <activity android:name=".activities.OrderCompletedActivity"></activity>
+        <activity android:name=".activities.OrderHistoryActivity"></activity>
+        <activity android:name=".activities.OrderActivity" />
         <activity android:name=".activities.PaymentActivity" />
         <activity android:name=".activities.StartActivity">
             <intent-filter>
@@ -23,9 +21,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".activities.AddAddressActivity"></activity>
+        <activity android:name=".activities.AddAddressActivity" />
         <activity android:name=".activities.AddressActivity" />
         <activity android:name=".activities.CartActivity" />
         <activity android:name=".activities.ProductDetailActivity" />
@@ -33,10 +30,7 @@
         <activity android:name=".activities.MainActivity" />
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".activities.LoginActivity" />
-        <activity android:name=".activities.WelcomeActivity">
-
-
-        </activity>
+        <activity android:name=".activities.WelcomeActivity"></activity>
     </application>
 
 </manifest>
